# ratatui-splash-screen

./: CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: cd.yml  ci.yml
examples/: demo.rs
src/: assets.rs  config.rs  error.rs  lib.rs  splash_screen.rs
