[package]
name = "ratatui-splash-screen"
version = "0.1.0-alpha.3"
edition = "2021"
description = "A Ratatui widget to turn any image to a splash screen in your terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/orhun/ratatui-splash-screen"
documentation = "https://docs.rs/ratatui-splash-screen"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
categories = ["command-line-interface", "gui"]
keywords = ["ratatui", "terminal", "tui", "splash", "console"]

[dependencies]
ratatui = ">=0.25.0"
image = { version = "0.25.0", default-features = false, features = [
  "png",
  "jpeg",
] }
sha256 = { version = "1.5.0", default-features = false }

[dev-dependencies]
crossterm = "0.27.0"
anyhow = "1.0.81"
hex-literal = "0.4.1"
