[package]
name = "ratatui-splash-screen"
version = "0.1.5"
edition = "2021"
description = "A Ratatui widget to turn any image to a splash screen in your terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/orhun/ratatui-splash-screen"
documentation = "https://docs.rs/ratatui-splash-screen"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
categories = ["command-line-interface", "gui"]
keywords = ["ratatui", "terminal", "tui", "splash", "console"]

[features]
default = ["png", "jpeg"]
png = ["image/png"]
jpeg = ["image/jpeg"]

[dependencies]
ratatui = ">=0.25.0"
image = { version = "0.25.10", default-features = false }
sha256 = { version = "1.6.0", default-features = false }

[dev-dependencies]
crossterm = "0.29.0"
anyhow = "1.0.102"
hex-literal = "1.1.0"
